VMO-163 minor updates to versions and notebooks for 6.0/6.1

--- a/byom/pima/BYOM.ipynb
+++ b/byom/pima/BYOM.ipynb
@@ -49,14 +49,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usernamewf250003\n",
-      "password········\n"
+      "Host: tdprd.td.teradata.com\n",
+      "Username: wf250003\n",
+      "Password: ········\n",
+      "VAL DB: TRNG_XSP\n",
+      "BYOM DB: TRNG_BYOM\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Engine(teradatasql://wf250003:***@3.238.151.85/?LOGMECH=%2A%2A%2A)"
+       "Engine(teradatasql://wf250003:***@tdprd.td.teradata.com/?LOGDATA=%2A%2A%2A&LOGMECH=%2A%2A%2A)"
       ]
      },
      "execution_count": 2,
@@ -65,13 +68,20 @@
     }
    ],
    "source": [
-    "username = input(\"Username\")\n",
-    "password = getpass.getpass(\"password\")\n",
+    "host = input(\"Host: \")\n",
+    "username = input(\"Username: \")\n",
+    "password = getpass.getpass(\"Password: \")\n",
+    "val_db = input(\"VAL DB: \")\n",
+    "byom_db = input(\"BYOM DB: \")\n",
+    "\n",
+    "# configure byom/val installation\n",
+    "configure.val_install_location = val_db\n",
+    "configure.byom_install_location = byom_db\n",
     "\n",
     "# by default we assume your are using your user database. change as required\n",
     "database = username\n",
     "\n",
-    "create_context(host=\"3.238.151.85\", username=username, password=password, logmech=\"TDNEGO\")"
+    "create_context(host=host, username=username, password=password, logmech=\"TDNEGO\")\n"
    ]
   },
   {
@@ -83,7 +93,20 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('scaler', MinMaxScaler()),\n",
-       "                ('xgb', XGBClassifier(eta=0.2, max_depth=6))])"
+       "                ('xgb',\n",
+       "                 XGBClassifier(base_score=0.5, booster='gbtree', callbacks=None,\n",
+       "                               colsample_bylevel=1, colsample_bynode=1,\n",
+       "                               colsample_bytree=1, early_stopping_rounds=None,\n",
+       "                               enable_categorical=False, eta=0.2,\n",
+       "                               eval_metric=None, gamma=0, gpu_id=-1,\n",
+       "                               grow_policy='depthwise', importance_type=None,\n",
+       "                               interaction_constraints='',\n",
+       "                               learning_rate=0.200000003, max_bin=256,\n",
+       "                               max_cat_to_onehot=4, max_delta_step=0,\n",
+       "                               max_depth=6, max_leaves=0, min_child_weight=1,\n",
+       "                               missing=nan, monotone_constraints='()',\n",
+       "                               n_estimators=100, n_jobs=0, num_parallel_tree=1,\n",
+       "                               predictor='auto', random_state=0, reg_alpha=0, ...))])"
       ]
      },
      "execution_count": 3,
@@ -148,9 +171,7 @@
     "We can also convert the model to onnx format. This is a bit more involved as the client libraries for converting from sklearn/xgboost to onnx are not yet as mature.\n",
     "\n",
     "```\n",
-    "onnx==1.10.2\n",
-    "skl2onnx==1.11.2\n",
-    "onnxruntime==1.9.0\n",
+    "pip install onnx==1.10.2 skl2onnx==1.11.2 onnxruntime==1.9.0\n",
     "```"
    ]
   },
@@ -199,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -234,20 +255,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>152b6ef8-33a5-4740-b68b-093baad1284a</td>\n",
-       "      <td>2a35e4bc-8a6d-4643-9bdd-dedbb73d28d5</td>\n",
-       "      <td>ONNX</td>\n",
-       "      <td>604eb52c-a12f-440e-b013-57956dcec9d5</td>\n",
-       "      <td>2022-07-06 18:50:30.730</td>\n",
-       "      <td>b'\\x08\\x08\\x12\\x08skl2onnx\\x1a\\x061.10.3\"\\x07ai.onnx(\\x002\\x00:\\xc8\\xa7\\x08\\n\\xb5\\x01\\n\\x0bNumTimesPrg\\n\\x03Age\\n\\tPlGlcConc\\n\\x06BloodP\\n\\tSkinThick\\n\\rTwoHourSerIns\\n\\x03BMI\\n\\tDiPedFunc\\x12\\x0cconcatenated\\x1a\\x11FeatureVectorizer\"\\x11FeatureV...</td>\n",
+       "      <td>9de00f0d-060c-4737-b0a3-531768363ced</td>\n",
+       "      <td>2354a903-601b-5f72-b014-8983306005b4</td>\n",
+       "      <td>PMML</td>\n",
+       "      <td>414bec4e-c677-4f2e-a370-0076e57918ea</td>\n",
+       "      <td>2022-07-20 11:02:35.470</td>\n",
+       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>dc4c7409-f01c-407b-a714-beaa7eca41d4</td>\n",
-       "      <td>d204aefd-1669-4045-bfbf-176dd70cfc7a</td>\n",
+       "      <td>5761d5c1-bf57-456b-8076-c3062be0b544</td>\n",
+       "      <td>2354a903-601b-5f72-b014-8983306005b4</td>\n",
        "      <td>PMML</td>\n",
-       "      <td>604eb52c-a12f-440e-b013-57956dcec9d5</td>\n",
-       "      <td>2022-07-06 18:52:30.330</td>\n",
+       "      <td>414bec4e-c677-4f2e-a370-0076e57918ea</td>\n",
+       "      <td>2022-07-18 07:04:19.430</td>\n",
        "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -256,19 +277,19 @@
       ],
       "text/plain": [
        "                          model_version                              model_id  \\\n",
-       "0  152b6ef8-33a5-4740-b68b-093baad1284a  2a35e4bc-8a6d-4643-9bdd-dedbb73d28d5   \n",
-       "1  dc4c7409-f01c-407b-a714-beaa7eca41d4  d204aefd-1669-4045-bfbf-176dd70cfc7a   \n",
+       "0  9de00f0d-060c-4737-b0a3-531768363ced  2354a903-601b-5f72-b014-8983306005b4   \n",
+       "1  5761d5c1-bf57-456b-8076-c3062be0b544  2354a903-601b-5f72-b014-8983306005b4   \n",
        "\n",
        "  model_type                            project_id             deployed_at  \\\n",
-       "0       ONNX  604eb52c-a12f-440e-b013-57956dcec9d5 2022-07-06 18:50:30.730   \n",
-       "1       PMML  604eb52c-a12f-440e-b013-57956dcec9d5 2022-07-06 18:52:30.330   \n",
+       "0       PMML  414bec4e-c677-4f2e-a370-0076e57918ea 2022-07-20 11:02:35.470   \n",
+       "1       PMML  414bec4e-c677-4f2e-a370-0076e57918ea 2022-07-18 07:04:19.430   \n",
        "\n",
        "                                                                                                                                                                                                                                                       model  \n",
-       "0  b'\\x08\\x08\\x12\\x08skl2onnx\\x1a\\x061.10.3\"\\x07ai.onnx(\\x002\\x00:\\xc8\\xa7\\x08\\n\\xb5\\x01\\n\\x0bNumTimesPrg\\n\\x03Age\\n\\tPlGlcConc\\n\\x06BloodP\\n\\tSkinThick\\n\\rTwoHourSerIns\\n\\x03BMI\\n\\tDiPedFunc\\x12\\x0cconcatenated\\x1a\\x11FeatureVectorizer\"\\x11FeatureV...  \n",
+       "0  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  \n",
        "1  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,8 +787,6 @@
     "\n",
     "import os\n",
     "import json\n",
-    "\n",
-    "configure.byom_install_location = os.environ.get(\"AOA_BYOM_INSTALL_DB\", \"MLDB\")\n",
     "\n",
     "\n",
     "def plot_confusion_matrix(cf, img_filename):\n",
@@ -872,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +899,8 @@
      "output_type": "stream",
      "text": [
       "INFO:aoa.util.connections:teradataml context already exists. Skipping create_context.\n",
-      "INFO:aoa.stats.stats:Computing evaluation dataset statistics\n"
+      "INFO:aoa.stats.stats:Computing evaluation dataset statistics\n",
+      "{'Accuracy': '0.75', 'Recall': '0.67', 'Precision': '0.67', 'f1-score': '0.67'}\n"
      ]
     },
     {
@@ -932,9 +952,110 @@
     "                   model_table=\"aoa_model_v1\")\n",
     "\n",
     "\n",
-    "# drop tmp table from session if executing multiple times\n",
-    "# get_context().execute(f\"DROP TABLE byom_models_tmp\")\n",
-    "evaluate(context=ctx)"
+    "# drop volatile table from session if executing multiple times\n",
+    "try:\n",
+    "    get_context().execute(f\"DROP TABLE byom_models_tmp\")\n",
+    "except: \n",
+    "    pass\n",
+    "\n",
+    "evaluate(context=ctx)\n",
+    "\n",
+    "# view evaluation results\n",
+    "with open(f\"{ctx.artifact_output_path}/metrics.json\") as f:\n",
+    "    print(json.load(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "\ttable {border:ridge 5px;}\n",
+       "\ttable td {border:inset 1px;}\n",
+       "\ttable tr#HeaderRow {background-color:grey; color:white;}</style>\n",
+       "<html><table>\n",
+       "\t<tr id=\"HeaderRow\">\n",
+       "\t\t<th>PatientId</th>\n",
+       "\t\t<th>HasDiabetes</th>\n",
+       "\t\t<th>json_report</th>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>390</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td>{\"probability_0\":0.8534884407791314,\"probability_1\":0.1465115592208686,\"predicted_HasDiabetes\":0}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>575</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td>{\"probability_0\":0.5411704893844536,\"probability_1\":0.4588295106155465,\"predicted_HasDiabetes\":0}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>740</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td>{\"probability_0\":0.18309459019075702,\"probability_1\":0.816905409809243,\"predicted_HasDiabetes\":1}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>290</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td>{\"probability_0\":0.9275644263007603,\"probability_1\":0.0724355736992397,\"predicted_HasDiabetes\":0}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>430</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td>{\"probability_0\":0.9993898309624312,\"probability_1\":6.101690375688237E-4,\"predicted_HasDiabetes\":0}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>410</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td>{\"probability_0\":0.7306026985110992,\"probability_1\":0.26939730148890084,\"predicted_HasDiabetes\":0}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>460</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td>{\"probability_0\":0.7245463351662919,\"probability_1\":0.27545366483370815,\"predicted_HasDiabetes\":0}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>325</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td>{\"probability_0\":0.6100536262346685,\"probability_1\":0.3899463737653314,\"predicted_HasDiabetes\":0}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>360</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td>{\"probability_0\":0.014436294801631777,\"probability_1\":0.9855637051983682,\"predicted_HasDiabetes\":1}</td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>560</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td>{\"probability_0\":0.681609701643378,\"probability_1\":0.3183902983566221,\"predicted_HasDiabetes\":0}</td>\n",
+       "\t</tr>\n",
+       "</table></html>"
+      ],
+      "text/plain": [
+       "   PatientId  HasDiabetes                                                                                          json_report\n",
+       "0        725            0   {\"probability_0\":0.7656401654913679,\"probability_1\":0.23435983450863204,\"predicted_HasDiabetes\":0}\n",
+       "1        575            0    {\"probability_0\":0.5411704893844536,\"probability_1\":0.4588295106155465,\"predicted_HasDiabetes\":0}\n",
+       "2        740            1    {\"probability_0\":0.18309459019075702,\"probability_1\":0.816905409809243,\"predicted_HasDiabetes\":1}\n",
+       "3        145            0  {\"probability_0\":0.9954274192406505,\"probability_1\":0.004572580759349547,\"predicted_HasDiabetes\":0}\n",
+       "4        290            0    {\"probability_0\":0.9275644263007603,\"probability_1\":0.0724355736992397,\"predicted_HasDiabetes\":0}\n",
+       "5        410            0   {\"probability_0\":0.7306026985110992,\"probability_1\":0.26939730148890084,\"predicted_HasDiabetes\":0}\n",
+       "6        415            1   {\"probability_0\":0.37542607752957524,\"probability_1\":0.6245739224704248,\"predicted_HasDiabetes\":1}\n",
+       "7        570            0  {\"probability_0\":0.9871590600678464,\"probability_1\":0.012840939932153675,\"predicted_HasDiabetes\":0}\n",
+       "8        700            0  {\"probability_0\":0.9828242945003008,\"probability_1\":0.017175705499699205,\"predicted_HasDiabetes\":0}\n",
+       "9        465            0   {\"probability_0\":0.9821548641078263,\"probability_1\":0.01784513589217372,\"predicted_HasDiabetes\":0}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DataFrame.from_query(\"SELECT PatientId, HasDiabetes, json_report FROM predictions_tmp\")"
    ]
   },
   {
@@ -947,9 +1068,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:aoa] *",
+   "display_name": "Python [conda env:py39]",
    "language": "python",
-   "name": "conda-env-aoa-py"
+   "name": "conda-env-py39-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -961,7 +1082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
