--- a/model_definitions/python-diabetes/notebooks/Operationalize.ipynb
+++ b/model_definitions/python-diabetes/notebooks/Operationalize.ipynb
@@ -30,8 +30,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usernamewf250003\n",
-      "password········\n"
+      "Host: tdprd.td.teradata.com\n",
+      "Username: wf250003\n",
+      "Password: ········\n"
      ]
     }
    ],
@@ -39,13 +40,20 @@
     "from teradataml import create_context\n",
     "import getpass\n",
     "\n",
-    "username = input(\"Username\")\n",
-    "password = getpass.getpass(\"password\")\n",
+    "host = input(\"Host: \")\n",
+    "username = input(\"Username: \")\n",
+    "password = getpass.getpass(\"Password: \")\n",
+    "val_db = input(\"VAL DB: \")\n",
+    "byom_db = input(\"BYOM DB: \")\n",
+    "\n",
+    "# configure byom/val installation\n",
+    "configure.val_install_location = val_db\n",
+    "configure.byom_install_location = byom_db\n",
     "\n",
     "# by default we assume your are using your user database. change as required\n",
     "database = username\n",
     "\n",
-    "engine = create_context(host=\"3.238.151.85\", username=username, password=password, logmech=\"TDNEGO\")"
+    "create_context(host=host, username=username, password=password, logmech=\"TDNEGO\")"
    ]
   },
   {
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,6 +179,7 @@
    ],
    "source": [
     "from aoa import ModelContext, DatasetInfo\n",
+    "from teradataml import configure\n",
     "\n",
     "# Define the ModelContext to test with. The ModelContext is created and managed automatically by ModelOps \n",
     "# when it executes your code via CLI / UI. However, for testing in the notebook, you can define as follows\n",
@@ -236,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,18 +317,18 @@
     "                                      columns=['col_name', 'feature_importance_vals'])\n",
     "    feature_importance = feature_importance.set_index(\"col_name\").T.to_dict(orient='records')[0]\n",
     "\n",
-    "    predictions_table = \"evaluation_preds_tmp\"\n",
+    "    predictions_table = \"predictions_tmp\"\n",
     "    copy_to_sql(df=y_pred_tdf, table_name=predictions_table, index=False, if_exists=\"replace\", temporary=True)\n",
     "\n",
     "    record_evaluation_stats(features_df=test_df,\n",
-    "                            predicted_df=DataFrame(predictions_table),\n",
+    "                            predicted_df=DataFrame.from_query(f\"SELECT * FROM {predictions_table}\"),\n",
     "                            importance=feature_importance,\n",
     "                            context=context)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +343,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting feature_perturbation = \"tree_path_dependent\" because no background data was given.\n"
+      "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "ntree_limit is deprecated, use `iteration_range` or model slicing instead.\n"
      ]
     },
     {
@@ -390,7 +400,11 @@
     "                   model_version=\"v1\",\n",
     "                   model_table=\"aoa_model_v1\")\n",
     "\n",
-    "evaluate(context=ctx)"
+    "evaluate(context=ctx)\n",
+    "\n",
+    "# view evaluation results\n",
+    "with open(f\"{ctx.artifact_output_path}/metrics.json\") as f:\n",
+    "    print(json.load(f))"
    ]
   },
   {
@@ -418,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -550,6 +564,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "\ttable {border:ridge 5px;}\n",
+       "\ttable td {border:inset 1px;}\n",
+       "\ttable tr#HeaderRow {background-color:grey; color:white;}</style>\n",
+       "<html><table>\n",
+       "\t<tr id=\"HeaderRow\">\n",
+       "\t\t<th>job_id</th>\n",
+       "\t\t<th>PatientId</th>\n",
+       "\t\t<th>HasDiabetes</th>\n",
+       "\t\t<th>json_report</th>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>360</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>45</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>490</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>660</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>30</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>220</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>355</td>\n",
+       "\t\t<td>1</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>560</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>460</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "\t<tr>\n",
+       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
+       "\t\t<td>325</td>\n",
+       "\t\t<td>0</td>\n",
+       "\t\t<td></td>\n",
+       "\t</tr>\n",
+       "</table></html>"
+      ],
+      "text/plain": [
+       "                                 job_id  PatientId  HasDiabetes json_report\n",
+       "0  2d16fcf4-78e3-4801-a052-a9c224814b85        360            1            \n",
+       "1  2d16fcf4-78e3-4801-a052-a9c224814b85         45            1            \n",
+       "2  2d16fcf4-78e3-4801-a052-a9c224814b85        490            0            \n",
+       "3  2d16fcf4-78e3-4801-a052-a9c224814b85        660            1            \n",
+       "4  2d16fcf4-78e3-4801-a052-a9c224814b85         30            1            \n",
+       "5  2d16fcf4-78e3-4801-a052-a9c224814b85        220            1            \n",
+       "6  2d16fcf4-78e3-4801-a052-a9c224814b85        355            1            \n",
+       "7  2d16fcf4-78e3-4801-a052-a9c224814b85        560            0            \n",
+       "8  2d16fcf4-78e3-4801-a052-a9c224814b85        460            0            \n",
+       "9  2d16fcf4-78e3-4801-a052-a9c224814b85        325            0            "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DataFrame.from_query(f\"SELECT * FROM {database}.pima_patient_predictions_tmp\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -592,9 +710,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:aoa] *",
+   "display_name": "Python [conda env:py39]",
    "language": "python",
-   "name": "conda-env-aoa-py"
+   "name": "conda-env-py39-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -606,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
