--- a/byom/pima/BYOM.ipynb
+++ b/byom/pima/BYOM.ipynb
@@ -434,8 +434,6 @@
     }
    ],
    "source": [
-    "configure.byom_install_location = \"mldb\"\n",
-    "\n",
     "model_version=\"1dbe5430-f8c5-4d32-b26c-a02476cba510\"\n",
     "\n",
     "model = DataFrame.from_query(f\"\"\"\n",
@@ -581,7 +579,7 @@
    ],
    "source": [
     "query = f\"\"\"\n",
-    "SELECT * FROM mldb.PMMLPredict (\n",
+    "SELECT * FROM {byom_db}.PMMLPredict (\n",
     "    ON (SELECT * FROM pima_patient_features WHERE patientid MOD 5 = 0) AS DataTable\n",
     "    ON (SELECT * FROM aoa_byom_models \n",
     "            WHERE model_version='{model_version}') AS ModelTable DIMENSION\n",
@@ -711,7 +709,7 @@
    ],
    "source": [
     "query = f\"\"\"\n",
-    "SELECT td.* FROM mldb.ONNXPredict (\n",
+    "SELECT td.* FROM {byom_db}.ONNXPredict (\n",
     "    ON (SELECT * FROM pima_patient_features WHERE patientid MOD 5 = 0) AS DataTable\n",
     "    ON (SELECT * FROM aoa_byom_models \n",
     "            WHERE model_version='onnx-test') AS ModelTable DIMENSION\n",
