VMO-163 minor updates to versions and notebooks for 6.0/6.1

--- a/byom/pima/BYOM.ipynb
+++ b/byom/pima/BYOM.ipynb
@@ -171,7 +171,7 @@
     "We can also convert the model to onnx format. This is a bit more involved as the client libraries for converting from sklearn/xgboost to onnx are not yet as mature.\n",
     "\n",
     "```\n",
-    "pip install onnx==1.10.2 skl2onnx==1.11.2 onnxruntime==1.9.0\n",
+    "pip install onnx==1.10.2 skl2onnx==1.11.2 onnxruntime==1.9.0 protobuf==3.20.1 onnxmltools==1.7.0\n",
     "```"
    ]
   },
