VMO-163 upgrade python libraries to latest for python 3.9/3.7  (#139)

--- a/byom/pima/BYOM.ipynb
+++ b/byom/pima/BYOM.ipynb
@@ -171,7 +171,7 @@
     "We can also convert the model to onnx format. This is a bit more involved as the client libraries for converting from sklearn/xgboost to onnx are not yet as mature.\n",
     "\n",
     "```\n",
-    "pip install onnx==1.10.2 skl2onnx==1.11.2 onnxruntime==1.9.0\n",
+    "pip install onnx==1.10.2 skl2onnx==1.11.2 onnxruntime==1.9.0 protobuf==3.20.1 onnxmltools==1.7.0\n",
     "```"
    ]
   },
@@ -434,8 +434,6 @@
     }
    ],
    "source": [
-    "configure.byom_install_location = \"mldb\"\n",
-    "\n",
     "model_version=\"1dbe5430-f8c5-4d32-b26c-a02476cba510\"\n",
     "\n",
     "model = DataFrame.from_query(f\"\"\"\n",
@@ -581,7 +579,7 @@
    ],
    "source": [
     "query = f\"\"\"\n",
-    "SELECT * FROM mldb.PMMLPredict (\n",
+    "SELECT * FROM {byom_db}.PMMLPredict (\n",
     "    ON (SELECT * FROM pima_patient_features WHERE patientid MOD 5 = 0) AS DataTable\n",
     "    ON (SELECT * FROM aoa_byom_models \n",
     "            WHERE model_version='{model_version}') AS ModelTable DIMENSION\n",
@@ -711,7 +709,7 @@
    ],
    "source": [
     "query = f\"\"\"\n",
-    "SELECT td.* FROM mldb.ONNXPredict (\n",
+    "SELECT td.* FROM {byom_db}.ONNXPredict (\n",
     "    ON (SELECT * FROM pima_patient_features WHERE patientid MOD 5 = 0) AS DataTable\n",
     "    ON (SELECT * FROM aoa_byom_models \n",
     "            WHERE model_version='onnx-test') AS ModelTable DIMENSION\n",
