--- a/model_definitions/python-diabetes/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/python-diabetes/notebooks/Explore Diabetes.ipynb
@@ -46,7 +46,17 @@
     }
    },
    "source": [
-    "# Imports and configuration"
+    "# Install Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install -r ../model_modules/requirements.txt"
    ]
   },
   {
@@ -1132,7 +1142,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3.9",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1146,7 +1156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
