--- a/model_definitions/python-diabetes/notebooks/Operationalize.ipynb
+++ b/model_definitions/python-diabetes/notebooks/Operationalize.ipynb
@@ -12,33 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
     "import sys\n",
-    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)"
+    "!{sys.executable} -m pip install -r ../model_modules/requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Host: tdprd.td.teradata.com\n",
-      "Username: wf250003\n",
-      "Password: ········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from teradataml import create_context\n",
+    "from teradataml import create_context, configure\n",
     "import getpass\n",
+    "import logging\n",
+    "\n",
+    "\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
     "\n",
     "host = input(\"Host: \")\n",
     "username = input(\"Username: \")\n",
@@ -81,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,38 +138,17 @@
     "\n",
     "    record_training_stats(train_df,\n",
     "                          features=feature_names,\n",
-    "                          predictors=[target_name],\n",
+    "                          targets=[target_name],\n",
     "                          categorical=[target_name],\n",
-    "                          importance=feature_importance,\n",
+    "                          feature_importance=feature_importance,\n",
     "                          context=context)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:aoa.util.connections:teradataml context already exists. Skipping create_context.\n",
-      "Starting training...\n",
-      "Finished training\n",
-      "Saved trained model\n",
-      "INFO:aoa.stats.stats:Computing training dataset statistics\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from aoa import ModelContext, DatasetInfo\n",
     "from teradataml import configure\n",
@@ -196,7 +168,7 @@
     "\n",
     "feature_metadata =  {\n",
     "    \"database\": database,\n",
-    "    \"table\": \"aoa_feature_metadata\"\n",
+    "    \"table\": \"aoa_statistics_metadata\"\n",
     "}\n",
     "hyperparams = {\"max_depth\": 5, \"eta\": 0.2}\n",
     "\n",
@@ -245,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,51 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:aoa.util.connections:teradataml context already exists. Skipping create_context.\n",
-      "Scoring\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "ntree_limit is deprecated, use `iteration_range` or model slicing instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:aoa.stats.stats:Computing evaluation dataset statistics\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 864x576 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the ModelContext to test with. The ModelContext is created and managed automatically by ModelOps \n",
     "# when it executes your code via CLI / UI. However, for testing in the notebook, you can define as follows\n",
@@ -432,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,22 +437,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:aoa.util.connections:teradataml context already exists. Skipping create_context.\n",
-      "Scoring\n",
-      "Finished Scoring\n",
-      "Saved predictions in Teradata\n",
-      "INFO:aoa.stats.stats:Computing scoring dataset statistics\n",
-      "WARNING:aoa.stats.metrics:Publishing scoring metrics is not enabled\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the ModelContext to test with. The ModelContext is created and managed automatically by ModelOps \n",
     "# when it executes your code via CLI / UI. However, for testing in the notebook, you can define as follows\n",
@@ -565,104 +482,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "\ttable {border:ridge 5px;}\n",
-       "\ttable td {border:inset 1px;}\n",
-       "\ttable tr#HeaderRow {background-color:grey; color:white;}</style>\n",
-       "<html><table>\n",
-       "\t<tr id=\"HeaderRow\">\n",
-       "\t\t<th>job_id</th>\n",
-       "\t\t<th>PatientId</th>\n",
-       "\t\t<th>HasDiabetes</th>\n",
-       "\t\t<th>json_report</th>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>360</td>\n",
-       "\t\t<td>1</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>45</td>\n",
-       "\t\t<td>1</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>490</td>\n",
-       "\t\t<td>0</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>660</td>\n",
-       "\t\t<td>1</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>30</td>\n",
-       "\t\t<td>1</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>220</td>\n",
-       "\t\t<td>1</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>355</td>\n",
-       "\t\t<td>1</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>560</td>\n",
-       "\t\t<td>0</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>460</td>\n",
-       "\t\t<td>0</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "\t<tr>\n",
-       "\t\t<td>2d16fcf4-78e3-4801-a052-a9c224814b85</td>\n",
-       "\t\t<td>325</td>\n",
-       "\t\t<td>0</td>\n",
-       "\t\t<td></td>\n",
-       "\t</tr>\n",
-       "</table></html>"
-      ],
-      "text/plain": [
-       "                                 job_id  PatientId  HasDiabetes json_report\n",
-       "0  2d16fcf4-78e3-4801-a052-a9c224814b85        360            1            \n",
-       "1  2d16fcf4-78e3-4801-a052-a9c224814b85         45            1            \n",
-       "2  2d16fcf4-78e3-4801-a052-a9c224814b85        490            0            \n",
-       "3  2d16fcf4-78e3-4801-a052-a9c224814b85        660            1            \n",
-       "4  2d16fcf4-78e3-4801-a052-a9c224814b85         30            1            \n",
-       "5  2d16fcf4-78e3-4801-a052-a9c224814b85        220            1            \n",
-       "6  2d16fcf4-78e3-4801-a052-a9c224814b85        355            1            \n",
-       "7  2d16fcf4-78e3-4801-a052-a9c224814b85        560            0            \n",
-       "8  2d16fcf4-78e3-4801-a052-a9c224814b85        460            0            \n",
-       "9  2d16fcf4-78e3-4801-a052-a9c224814b85        325            0            "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DataFrame.from_query(f\"SELECT * FROM {database}.pima_patient_predictions_tmp\")"
    ]
@@ -679,13 +501,15 @@
     "\n",
     "```\n",
     "%%writefile ../model_modules/requirements.txt\n",
+    "numpy==1.22.4\n",
+    "pandas==1.1.5\n",
     "xgboost==0.90\n",
     "scikit-learn==0.24.2\n",
-    "shap==0.36.0\n",
-    "matplotlib==3.3.1\n",
-    "teradataml==17.0.0.4\n",
+    "shap==0.41.0\n",
+    "matplotlib==3.5.2\n",
+    "teradataml==17.10.0.1\n",
     "nyoka==4.3.0\n",
-    "aoa==6.0.0\n",
+    "aoa==6.1.4\n",
     "```\n",
     "\n",
     "The hyper parameter configuration (defaults)\n",
